# word-matching-game

./: .gitignore  .yarnrc.yml  Cargo.toml  LICENSE  README.md  package.json  tauri.conf.json  vite.config.js
src/: index.html  main.js  main.rs  sqlite.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  words.base.db  words.db
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
