[package]
name = "word-matching-game"
version = "0.1.0"
description = "A simple English word matching game built with Tauri"
authors = ["You"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.87.0"
default-run = "word-matching-game"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [] }
log = "0.4.27"
tauri-plugin-log = "2.4.0"
tauri-plugin-sql = "2.2.0"
serde_json = "1.0.140"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
