[package]
name = "word-matching-game"
version = "1.0.0"
description = "A word matching game built with Tauri"
authors = ["Max Sky"]
license = "MIT"
repository = "https://github.com/maxsky/word-matching-game"
edition = "2024"
rust-version = "1.87.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4.27"
serde_json = "1.0.140"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.2.0"
